[workspace]
members = [
]
[package]
name = "c2rust_out"
authors = ["C2Rust"]
version = "0.0.0"
publish = false
edition = "2021"
autobins = false

[lib]
name = "c2rust_out"
path = "c2rust-lib.rs"
crate-type = ["staticlib", "rlib"]
[[bin]]
path = "getdelays.rs"
name = "getdelays"
[dependencies]
anyhow = "1.0.79"
byteorder = "1.5.0"
clap = {version = "4.4.18", features = ["derive"]}
libc= "0.2"
log = "0.4.20"
netlink-packet-core = "0.7.0"
netlink-packet-generic = "0.3.3"
netlink-packet-utils = "0.5.2"
netlink-sys = "0.8.5"
pretty_env_logger = "0.5.0"

[profile.dev]
debug-assertions = false
