[package]
name = "getdelays-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
byteorder = "1.5.0"
clap = {version = "4.4.18", features = ["derive"]}
libc= "0.2"
log = "0.4.20"
netlink-packet-core = "0.7.0"
netlink-packet-generic = "0.3.3"
netlink-packet-utils = "0.5.2"
netlink-sys = "0.8.5"
pretty_env_logger = "0.5.0"

[[bin]]
name = "getdelays"
path = "src/bin/getdelays.rs"
